--- a/src/features/Files/File/file.module.scss
+++ b/src/features/Files/File/file.module.scss
@@ -1,20 +1,39 @@
 .fileContainer {
   width: 215px;
   height: 300px;
-  overflow: hidden;
-  cursor: pointer;
   text-align: center;
-  box-shadow: 0 0 7px rgba(0,0,0,0.5);
+  box-shadow: 0 0 7px rgba(0, 0, 0, 0.5);
   border-radius: 20px;
   padding: 15px;
+  overflow: hidden;
+  position: relative;
 
-  &:hover {
-    background-color: #e8eae9;
-    transition: .2s;
+  .wrapper {
+    -webkit-column-width: 215px;
+    column-width: 215px;
+    height: 100%;
+
+    a {
+      text-decoration: none;
+      color: #000;
+    }
+
+    .title {
+      margin-bottom: 10px;
+      &:hover {
+        transform: scale(1.1);
+        transition: .1s;
+      }
+    }
   }
-  .title {
-    .text {
-
+  .deleteIcon {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    cursor: pointer;
+    &:hover {
+      transform: scale(1.2);
+      transition: .2s;
     }
   }
 }
