--- a/src/common/components/AddFile/addFile.module.scss
+++ b/src/common/components/AddFile/addFile.module.scss
@@ -5,6 +5,10 @@
     flex-direction: column;
     row-gap: 30px;
     padding: 20px;
+    .error {
+      margin-top: 5px;
+      color: red;
+    }
   }
 }
 
