--- a/src/common/components/PopUp/popUp.module.scss
+++ b/src/common/components/PopUp/popUp.module.scss
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: center;
   transform: scale(0);
-
+  z-index: 100;
   .content {
     border-radius: 2px;
     background-color: white;
