--- a/src/features/Files/File/file.module.scss
+++ b/src/features/Files/File/file.module.scss
@@ -3,7 +3,7 @@
   height: 300px;
   text-align: center;
   box-shadow: 0 0 7px rgba(0, 0, 0, 0.5);
-  border-radius: 20px;
+  border-radius: 3px;
   padding: 15px;
   overflow: hidden;
   position: relative;
@@ -15,21 +15,21 @@
 
     a {
       text-decoration: none;
-      color: #000;
+      color: #000
     }
 
     .title {
       margin-bottom: 10px;
       &:hover {
-        transform: scale(1.1);
-        transition: .1s;
+        color: #F8346B;
+        transition: .2s;
       }
     }
   }
   .deleteIcon {
     position: absolute;
-    top: 15px;
-    right: 15px;
+    bottom: 9px;
+    right: 9px;
     cursor: pointer;
     &:hover {
       transform: scale(1.2);
