--- a/src/common/components/AddOrEditFile/addOrEditFile.module.scss
+++ b/src/common/components/AddOrEditFile/addOrEditFile.module.scss
@@ -1,5 +1,8 @@
 .container {
   width: 400px;
+  @media screen and (max-width: 500px) {
+    width: 270px;
+}
   .content {
     display: flex;
     flex-direction: column;
