--- a/src/features/Files/FilePage/filePage.module.scss
+++ b/src/features/Files/FilePage/filePage.module.scss
@@ -5,14 +5,21 @@
   align-items: center;
   height: 100vh;
   width: 80%;
-  margin:0 auto;
+  margin: 0 auto;
   row-gap: 30px;
   padding-top: 50px;
+
+  span {
+
+  }
 
   .content {
     display: flex;
     flex-direction: column;
     row-gap: 30px;
 
+    .highLight {
+      background-color: yellow;
+    }
   }
 }
