--- a/src/common/components/LoadingLine/loadingLine.module.scss
+++ b/src/common/components/LoadingLine/loadingLine.module.scss
@@ -1,7 +1,7 @@
 .loading {
   width: 100%;
   height: 3px;
-  position: relative;
+  position: fixed;
   overflow: hidden;
   background-color: #ddd;
   -webkit-border-radius: 20px;
